Revamp gallery, program, and visit pages

--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -15,8 +15,7 @@
     </div>
     <div class="embla__overlay">
       <div class="embla__copy">
-        <h1>제주가 품은 정원, 마음을 여는 공간</h1>
-        <p><span class="text-variable">제주 민간 4호 정원, 가시림</span></p>
+        <h1>제주가 품은 정원,<br><span>마음을 여는 공간</span></h1>
       </div>
     </div>
   </div>
