--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,55 +3,53 @@
   <div class="footer-divider"></div>
 
   <div class="footer-left">
-    <img class="footer-logo" src="https://via.placeholder.com/119x38?text=Logo" alt="가시림 로고" width="119" height="38" />
+    <img class="footer-logo" src="./assets/img/logo_text_white.png" alt="가시림 로고" width="160" height="48" />
 
     <address class="footer-contact">
-      Phone: <a href="tel:01234567890">012-3456-7890</a><br />
-      Address: <a href="https://maps.google.com/" target="_blank" rel="noopener noreferrer">
-        123 Gasirim Road, Jeju, South Korea
-      </a>
+      <span class="footer-contact__item">전화 <a href="tel:07042810906">070-4281-0906</a></span>
+      <span class="footer-contact__item">주소 <a href="https://maps.google.com/?q=가시림" target="_blank" rel="noopener noreferrer">제주특별자치도 제주시 애월읍 가시림길 10</a></span>
+      <span class="footer-contact__item">이메일 <a href="mailto:hello@gasirim.kr">hello@gasirim.kr</a></span>
     </address>
 
     <div class="footer-social">
-      <a href="https://instagram.com/jeju_gasirim/" aria-label="Instagram" class="social-btn" target="_blank" rel="noopener noreferrer">
+      <a href="https://instagram.com/jeju_gasirim" aria-label="Instagram" class="social-btn" target="_blank" rel="noopener noreferrer">
         <svg viewBox="0 0 24 24" class="icon" aria-hidden="true" focusable="false">
-          <rect x="3" y="3" width="18" height="18" rx="5"/>
-          <circle cx="12" cy="12" r="4"/>
-          <circle cx="17.5" cy="6.5" r="1.5"/>
+          <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7Zm5 3.5A5.5 5.5 0 1 1 6.5 13 5.5 5.5 0 0 1 12 7.5Zm0 2A3.5 3.5 0 1 0 15.5 13 3.5 3.5 0 0 0 12 9.5Zm6.75-3.75a1.25 1.25 0 1 1-1.25 1.25 1.25 1.25 0 0 1 1.25-1.25Z"/>
         </svg>
       </a>
-      <a href="https://youtube.com/" aria-label="YouTube" class="social-btn" target="_blank" rel="noopener noreferrer">
+      <a href="https://www.youtube.com/" aria-label="YouTube" class="social-btn" target="_blank" rel="noopener noreferrer">
         <svg viewBox="0 0 24 24" class="icon" aria-hidden="true" focusable="false">
-          <path d="M22 12s0-3.5-.44-5.14A3 3 0 0 0 19.86 4.3C18.2 3.86 12 3.86 12 3.86s-6.2 0-7.86.44A3 3 0 0 0 2.44 6.86C2 8.5 2 12 2 12s0 3.5.44 5.14a3 3 0 0 0 1.7 2.56C5.8 20.14 12 20.14 12 20.14s6.2 0 7.86-.44a3 3 0 0 0 1.7-2.56C22 15.5 22 12 22 12Z"/>
-          <path d="M10 15.5v-7l6 3.5-6 3.5Z"/>
+          <path d="M21.6 6.2a2.5 2.5 0 0 0-1.76-1.77C18.1 4 12 4 12 4s-6.1 0-7.84.43A2.5 2.5 0 0 0 2.4 6.2 26.7 26.7 0 0 0 2 12a26.7 26.7 0 0 0 .4 5.8 2.5 2.5 0 0 0 1.76 1.77C5.9 20 12 20 12 20s6.1 0 7.84-.43A2.5 2.5 0 0 0 21.6 17.8 26.7 26.7 0 0 0 22 12a26.7 26.7 0 0 0-.4-5.8ZM10.5 15.3V8.7L16 12Z"/>
         </svg>
       </a>
-      <a href="https://facebook.com/" aria-label="Facebook" class="social-btn" target="_blank" rel="noopener noreferrer">
+      <a href="https://pf.kakao.com/" aria-label="KakaoTalk" class="social-btn" target="_blank" rel="noopener noreferrer">
         <svg viewBox="0 0 24 24" class="icon" aria-hidden="true" focusable="false">
-          <path d="M13.5 22v-8h2.7l.4-3h-3.1V9.2c0-.9.3-1.5 1.6-1.5H17V5.1c-.3 0-1.3-.1-2.4-.1-2.4 0-4 .9-4 3.6V11H7.9v3h2.7v8h2.9Z"/>
+          <path d="M12 3.5c-5.11 0-9.25 3.25-9.25 7.26 0 2.66 1.9 4.97 4.75 6.16L6 21.5l4.4-3.06c.51.06 1.03.09 1.56.09 5.11 0 9.25-3.25 9.25-7.26S17.11 3.5 12 3.5Z"/>
+          <path d="M8.1 10.06h1.34v3.27H8.1Zm3.06 0h1.24l.02 1.73 1.41-1.73h1.35l-1.63 1.87 1.7 2.01h-1.42l-1.39-1.69-.04 1.69h-1.24Zm-4.82 0H5v3.27h1.34Zm9.68 0h-1.44v3.27h1.44Zm-5.73-.88a.88.88 0 1 1-.88-.88.88.88 0 0 1 .88.88Z" fill="#fff"/>
         </svg>
       </a>
     </div>
   </div>
 
-  <nav class="footer-col col-1" aria-label="About links">
-    <h4 class="footer-topic">About</h4>
-    <a class="footer-link" href="/about">About Gasirim</a>
-    <a class="footer-link" href="/map">Arboretum Map</a>
-    <a class="footer-link" href="/tour">Virtual Tour</a>
+  <nav class="footer-col" aria-label="소개 메뉴">
+    <h4 class="footer-topic">소개</h4>
+    <a class="footer-link" href="소개.html#공간소개">공간 소개</a>
+    <a class="footer-link" href="소개.html#수목원지도">수목원 지도</a>
+    <a class="footer-link" href="소개.html#둘러보기">둘러보기</a>
   </nav>
 
-  <nav class="footer-col col-2" aria-label="Visit links">
-    <h4 class="footer-topic">Visit</h4>
-    <a class="footer-link" href="/visit">Visitor Info</a>
-    <a class="footer-link" href="/directions">Directions</a>
-    <a class="footer-link" href="/group">Group Inquiries</a>
+  <nav class="footer-col" aria-label="방문 메뉴">
+    <h4 class="footer-topic">방문</h4>
+    <a class="footer-link" href="방문.html#이용안내">이용 안내</a>
+    <a class="footer-link" href="방문.html#오시는길">오시는 길</a>
+    <a class="footer-link" href="방문.html#단체문의">단체 문의</a>
   </nav>
 
-  <nav class="footer-col col-3" aria-label="Programs links">
-    <h4 class="footer-topic">Programs</h4>
-    <a class="footer-link" href="/programs/walk">Walking Meditation</a>
-    <a class="footer-link" href="/programs/meditation">Meditation</a>
-    <a class="footer-link" href="/programs/gardening">Gardening</a>
+  <nav class="footer-col" aria-label="프로그램 메뉴">
+    <h4 class="footer-topic">프로그램</h4>
+    <a class="footer-link" href="프로그램.html">전체 프로그램</a>
+    <a class="footer-link" href="산책명상.html">산책 명상</a>
+    <a class="footer-link" href="명상.html">명상</a>
+    <a class="footer-link" href="원예.html">원예</a>
   </nav>
 </footer>
