--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -29,11 +29,11 @@
         </ul>
       </li>
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
-        <a href="프로그램.html">프로그램</a>
+        <a href="프로그램소개.html">프로그램</a>
         <ul class="nav-sub" role="menu" aria-label="프로그램 하위 메뉴">
-          <li role="menuitem"><a href="산책명상.html">산책명상</a></li>
-          <li role="menuitem"><a href="명상.html">명상</a></li>
-          <li role="menuitem"><a href="원예.html">원예</a></li>
+          <li role="menuitem"><a href="프로그램목록.html#산책명상">산책명상</a></li>
+          <li role="menuitem"><a href="프로그램목록.html#명상">명상</a></li>
+          <li role="menuitem"><a href="프로그램목록.html#원예">원예</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0"><a href="shop.html">Shop</a></li>
