--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -1,5 +1,5 @@
 <a class="brand-title" href="/gasirim.github.io/">
-  <img src="./assets/img/logo_text_white.png" class="brand-logo" />
+  <img src="./assets/img/logo_text_white.png" class="brand-logo" alt="가시림" />
   <!-- <span class="brand-text">
     <span class="brand-name">加 時 林</span>
     <span class="brand-tagline">치유의 정원</span>
@@ -28,7 +28,7 @@
     </div>
     <div class="embla__overlay">
       <div class="embla__copy">
-        <h1>제주가 품은 정원,<br><span>마음을 여는 공간</span></h1>
+        <h1>제주가 품은<br>사계절의 정원<br>가시림</h1>
       </div>
       <div class="embla__asset-text">
         <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
