--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,12 +3,12 @@
   <div class="footer-divider"></div>
 
   <div class="footer-left">
-    <img class="footer-logo" src="./assets/img/logo_text_white.png" alt="가시림 로고" width="160" height="48" />
+    <img class="footer-logo" src="./assets/img/가시림로고_텍스트.png" alt="가시림 로고" width="160" height="48" />
 
     <address class="footer-contact">
-      <span class="footer-contact__item">전화 <a href="tel:07042810906">070-4281-0906</a></span>
-      <span class="footer-contact__item">주소 <a href="https://maps.google.com/?q=제주특별자치도+서귀포시+표선면+녹산로5번길+171" target="_blank" rel="noopener noreferrer">제주특별자치도 서귀포시 표선면 녹산로5번길 171</a></span>
-      <span class="footer-contact__item">이메일 <a href="mailto:jejugaisirm@gmail.com">jejugaisirm@gmail.com</a></span>
+      <span class="footer-contact__item">전화 | <a href="tel:07042810906">070-4281-0906</a></span>
+      <span class="footer-contact__item">주소 | <a href="https://maps.google.com/?q=제주특별자치도+서귀포시+표선면+녹산로5번길+171" target="_blank" rel="noopener noreferrer">제주특별자치도 서귀포시 표선면 녹산로5번길 171</a></span>
+      <span class="footer-contact__item">이메일 | <a href="mailto:jejugaisirm@gmail.com">jejugaisirm@gmail.com</a></span>
     </address>
 
     <div class="footer-social">
@@ -54,7 +54,6 @@
 
   <nav class="footer-col" aria-label="Shop 메뉴">
     <h4 class="footer-topic">Shop</h4>
-    <a class="footer-link" href="shop.html">Shop 홈</a>
     <a class="footer-link" href="shop.html?category=meditation">명상</a>
     <a class="footer-link" href="shop.html?category=gardening">원예</a>
     <a class="footer-link" href="shop.html?category=tea">차</a>
