--- a/partials/header-shop.html
+++ b/partials/header-shop.html
@@ -13,10 +13,6 @@
         비디오를 재생할 수 없는 환경입니다.
       </video>
     </div>
-    <div class="embla__overlay">
-      <div class="embla__copy">
-        <h1>제주가 품은<br>사계절의 정원<br>가시림</h1>
-      </div>
-    </div>
+    <div class="embla__overlay"></div>
   </div>
 </section>
