--- a/partials/footer.html
+++ b/partials/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-divider"></div>
 
   <div class="footer-left">
-    <img class="footer-logo" src="./assets/img/logo_text_white.png" alt="가시림 로고" width="160" height="48" />
+    <img class="footer-logo" src="./assets/img/footer-logo.png" alt="가시림 로고" width="160" height="48" />
 
     <address class="footer-contact">
       <span class="footer-contact__item">전화 | <a href="tel:07042810906">070-4281-0906</a></span>
