fixed logo redirect

--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -1,4 +1,4 @@
-<a class="brand-title" href="/gasirim.github.io/">
+<a class="brand-title" href="/">
   <img src="./assets/img/logo_text_white.png" class="brand-logo" alt="가시림" />
 </a>
 <section class="page-hero" aria-label="페이지 히어로 섹션">
