--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -1,4 +1,4 @@
-<a class="brand-title" href="/gasirim.github.io/">
+<a class="brand-title" href="/">
   <img src="./assets/img/logo_text_white.png" class="brand-logo" alt="가시림" />
   <!-- <span class="brand-text">
     <span class="brand-name">加 時 林</span>
