--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,10 +342,10 @@
   flex-wrap: wrap;
   align-items: flex-end;
   gap: 2rem;
-  padding-top: 0;
+  padding-top: clamp(20px, 15vh, 190px);
   padding-bottom: clamp(20px, 15vh, 190px);
   padding-right: clamp(20px, 8vw, 350px);
-  padding-left: clamp(20px, 8vw, 350px);
+  padding-left: clamp(250px, 8vw, 350px);
   color: #fff;
   background: linear-gradient(to top, rgba(0,0,0,.8) 0%, rgba(0,0,0,0) 60%);
 }
@@ -356,7 +356,7 @@
 
 .embla__copy h1 {
   margin: 0;
-  font-size: 36px;
+  font-size: 18px;
   font-weight: 300;
   font-family: var(--font-myeongjo);
   line-height: 2;
