--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -5,8 +5,12 @@
     type="button"
     aria-expanded="false"
     aria-controls="main-menu"
-    aria-label="메인 메뉴 열기/닫기">
-    <img src="./assets/img/logo_tree_white.png" alt="메뉴 아이콘" />
+    aria-label="메인 메뉴 열기 또는 닫기">
+    <span class="nav-toggle__box" aria-hidden="true">
+      <span class="nav-toggle__line nav-toggle__line--top"></span>
+      <span class="nav-toggle__line nav-toggle__line--middle"></span>
+      <span class="nav-toggle__line nav-toggle__line--bottom"></span>
+    </span>
   </button>
 
   <!-- navi bar -->
