--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -879,7 +879,7 @@
 }
 
 .body-container--stacked .intro-hero {
-  margin: 0;
+  margin-bottom: 100px;
 }
 
 
@@ -1090,7 +1090,7 @@
 
 .intro-gallery-viewport {
   position: relative;
-  overflow: hidden;
+  overflow: inherit;
   width: 100%;
   margin: 0;
 }
@@ -1112,7 +1112,7 @@
 }
 
 .intro-gallery__slide {
-  flex: 0 0 100%;
+  flex: 0 0 40%;
   margin: 0;
   display: flex;
   align-items: center;
@@ -2002,7 +2002,7 @@ body.modal-open {
 .intro-img-wide__caption {
   font-weight: 400;
   line-height: 0;
-  font-size: clamp(15px, 1.7vw, 18px);
+  font-size: clamp(12px, 1.7vw, 15px);
   color: rgba(19, 41, 28, 0.7);
 }
 
