Improve navigation UI and fix visit page issues

--- a/partials/sticky-header-bar.html
+++ b/partials/sticky-header-bar.html
@@ -43,4 +43,5 @@
       <li class="nav-item" tabindex="0"><a href="shop.html">Shop</a></li>
     </ul>
   </nav>
+  <div class="nav-backdrop" data-nav-backdrop aria-hidden="true"></div>
 </header>
