--- a/partials/footer.html
+++ b/partials/footer.html
@@ -40,22 +40,24 @@
 
   <nav class="footer-col" aria-label="방문 메뉴">
     <h4 class="footer-topic">방문</h4>
-    <a class="footer-link" href="방문.html#이용안내">이용 안내</a>
+    <a class="footer-link" href="방문.html#운영시간">위치 및 운영 안내</a>
+    <a class="footer-link" href="방문.html#이용요금">이용 요금</a>
+    <a class="footer-link" href="방문.html#편의시설">편의 시설</a>
     <a class="footer-link" href="방문.html#오시는길">오시는 길</a>
-    <a class="footer-link" href="방문.html#단체문의">단체 문의</a>
+    <a class="footer-link" href="방문.html#문의">문의</a>
   </nav>
 
   <nav class="footer-col" aria-label="프로그램 메뉴">
     <h4 class="footer-topic">프로그램</h4>
-    <a class="footer-link" href="산책명상.html">산책 명상</a>
-    <a class="footer-link" href="명상.html">명상</a>
-    <a class="footer-link" href="원예.html">원예</a>
+    <a class="footer-link" href="프로그램소개.html">프로그램 소개</a>
+    <a class="footer-link" href="프로그램목록.html#산책명상">산책 명상</a>
+    <a class="footer-link" href="프로그램목록.html#명상">명상</a>
+    <a class="footer-link" href="프로그램목록.html#원예">원예</a>
   </nav>
 
   <nav class="footer-col" aria-label="Shop 메뉴">
     <h4 class="footer-topic">Shop</h4>
-    <a class="footer-link" href="shop.html?category=meditation">명상</a>
-    <a class="footer-link" href="shop.html?category=gardening">원예</a>
-    <a class="footer-link" href="shop.html?category=tea">차</a>
+    <a class="footer-link" href="shop.html#shop-heading">Shop 소개</a>
+    <a class="footer-link" href="shop.html#shop-catalog">상품 목록</a>
   </nav>
 </footer>
