changing header pics

--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -5,20 +5,53 @@
   <div class="embla">
     <div class="embla__viewport">
       <div class="embla__container">
+        <!-- 🌸 SPRING -->
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer.jpg" alt="Slide 1">
+          <img src="./assets/img/banner-fourseasons/spring.jpg" alt="봄 정원 전경" />
+        </div>
+
+        <!-- 🌿 SUMMER -->
+        <div class="embla__slide">
+          <img src="./assets/img/banner-fourseasons/summer.jpg" alt="여름 정원 전경" />
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/fall.jpg" alt="Slide 2">
+          <img src="./assets/img/banner-fourseasons/summer1.jpg" alt="여름 장면 1" />
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/winter.jpg" alt="Slide 3">
+          <img src="./assets/img/banner-fourseasons/summer2.jpg" alt="여름 장면 2" />
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/winter(withoutsnow).jpg" alt="Slide 4">
+          <img src="./assets/img/banner-fourseasons/summer3.jpg" alt="여름 장면 3" />
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="Slide 5">
+          <img src="./assets/img/banner-fourseasons/summer4.jpg" alt="여름 장면 4" />
+        </div>
+        <div class="embla__slide">
+          <img src="./assets/img/banner-fourseasons/summer5.jpg" alt="여름 장면 5" />
+        </div>
+
+        <!-- 🍁 FALL -->
+        <div class="embla__slide">
+          <img src="./assets/img/banner-fourseasons/fall.jpg" alt="가을 정원 전경" />
+        </div>
+        <div class="embla__slide">
+          <img src="./assets/img/banner-fourseasons/fall1.jpg" alt="가을 장면 1" />
+        </div>
+        <div class="embla__slide">
+          <img src="./assets/img/banner-fourseasons/fall2.jpg" alt="가을 장면 2" />
+        </div>
+
+        <!-- ❄️ WINTER -->
+        <div class="embla__slide">
+          <img src="./assets/img/banner-fourseasons/winter.jpg" alt="겨울 정원 전경" />
+        </div>
+        <div class="embla__slide">
+          <img src="./assets/img/banner-fourseasons/winter(withoutsnow).jpg" alt="눈 없는 겨울 정원" />
+        </div>
+
+        <!-- 🌲 MAIN -->
+        <div class="embla__slide">
+          <img src="./assets/img/main.jpg" alt="가시림 정원 대표 이미지" />
         </div>
       </div>
     </div>
@@ -27,11 +60,11 @@
         <h1>한<br>라<br>산<br> <br>중<br>상<br>간<br> <br>사<br>계<br>절<br>의<br> <br>정<br>원</h1>
       </div>
       <div class="embla__asset-text">
-        <p class="asset-text is-active" data-index="0"><a href="/gasirim.github.io/">오름 정원</a></p>
-        <p class="asset-text" data-index="1"><a href="/gasirim.github.io/">메타세쿼이어 숲</a></p>
-        <p class="asset-text" data-index="2"><a href="/gasirim.github.io/">팜파스그라스 길</a></p>
-        <p class="asset-text" data-index="3"><a href="/gasirim.github.io/">곶자왈</a></p>
-        <p class="asset-text" data-index="4"><a href="/gasirim.github.io/">수국 정원</a></p>
+        <p class="asset-text is-active" data-index="0">오름 정원</a></p>
+        <p class="asset-text" data-index="1">메타세쿼이어 숲</a></p>
+        <p class="asset-text" data-index="2">팜파스그라스 길</a></p>
+        <p class="asset-text" data-index="3">곶자왈</a></p>
+        <p class="asset-text" data-index="4">수국 정원</a></p>
       </div>
       <div class="embla__controls">
         <button class="embla__prev" aria-label="Previous slide">
