--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -6,52 +6,26 @@
     <div class="embla__viewport">
       <div class="embla__container">
         <!-- 🌸 SPRING -->
-        <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/spring.jpg" alt="봄 정원 전경" />
-        </div>
-
         <!-- 🌿 SUMMER -->
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer.jpg" alt="여름 정원 전경" />
+          <img src="./assets/img/banner-fourseasons/summer1.jpg" alt="여름 장면 - 정원 길" />
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer1.jpg" alt="여름 장면 1" />
+          <img src="./assets/img/banner-fourseasons/summer3.jpg" alt="여름 장면 - 배롱나무" />
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer2.jpg" alt="여름 장면 2" />
+          <img src="./assets/img/banner-fourseasons/summer4.jpg" alt="여름 장면 - 카페에서 바라 본 곶자왈" />
         </div>
-        <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer3.jpg" alt="여름 장면 3" />
-        </div>
-        <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer4.jpg" alt="여름 장면 4" />
-        </div>
-        <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer5.jpg" alt="여름 장면 5" />
-        </div>
-
         <!-- 🍁 FALL -->
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/fall.jpg" alt="가을 정원 전경" />
+          <img src="./assets/img/banner-fourseasons/fall.jpg" alt="가을 장면 - 메타세쿼이어 단풍" />
         </div>
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/fall1.jpg" alt="가을 장면 1" />
+          <img src="./assets/img/banner-fourseasons/fall1.jpg" alt="가을 장면 - 팜파스그라스" />
         </div>
-        <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/fall2.jpg" alt="가을 장면 2" />
-        </div>
-
         <!-- ❄️ WINTER -->
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/winter.jpg" alt="겨울 정원 전경" />
-        </div>
-        <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/winter(withoutsnow).jpg" alt="눈 없는 겨울 정원" />
-        </div>
-
-        <!-- 🌲 MAIN -->
-        <div class="embla__slide">
-          <img src="./assets/img/main.jpg" alt="가시림 정원 대표 이미지" />
+          <img src="./assets/img/banner-fourseasons/winter.jpg" alt="겨울 장면 - 눈과 동백꽃" />
         </div>
       </div>
     </div>
