changed header buttons

--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -8,7 +8,7 @@
         <!-- 🌸 SPRING -->
         <!-- 🌿 SUMMER -->
         <div class="embla__slide">
-          <img src="./assets/img/banner-fourseasons/summer1.jpg" alt="여름 장면 - 정원 길" />
+          <img src="./assets/img/banner-fourseasons/summer1.jpg" alt="여름 장면 - 동백꽃 길" />
         </div>
         <div class="embla__slide">
           <img src="./assets/img/banner-fourseasons/summer3.jpg" alt="여름 장면 - 배롱나무" />
@@ -35,10 +35,12 @@
       </div>
       <div class="embla__asset-text">
         <p class="asset-text is-active" data-index="0">오름 정원</a></p>
-        <p class="asset-text" data-index="1">메타세쿼이어 숲</a></p>
-        <p class="asset-text" data-index="2">팜파스그라스 길</a></p>
+        <p class="asset-text" data-index="1">산책로</a></p>
+        <p class="asset-text" data-index="2">배롱나무</a></p>
         <p class="asset-text" data-index="3">곶자왈</a></p>
-        <p class="asset-text" data-index="4">수국 정원</a></p>
+        <p class="asset-text" data-index="4">메타세쿼이어 숲</a></p>
+        <p class="asset-text" data-index="5">팜파스그라스</a></p>
+        <p class="asset-text" data-index="6">동백꽃</a></p>
       </div>
       <div class="embla__controls">
         <button class="embla__prev" aria-label="Previous slide">
