--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -34,13 +34,12 @@
         <h1>한<br>라<br>산<br> <br>중<br>상<br>간<br>, <br>사<br>계<br>절<br>의<br> <br>정<br>원</h1>
       </div>
       <div class="embla__asset-text">
-        <p class="asset-text is-active" data-index="0">오름 정원</a></p>
-        <p class="asset-text" data-index="1">산책로</a></p>
-        <p class="asset-text" data-index="2">배롱나무</a></p>
-        <p class="asset-text" data-index="3">곶자왈</a></p>
-        <p class="asset-text" data-index="4">메타세쿼이어 숲</a></p>
-        <p class="asset-text" data-index="5">팜파스그라스</a></p>
-        <p class="asset-text" data-index="6">동백꽃</a></p>
+        <p class="asset-text is-active" data-index="0">산책로</a></p>
+        <p class="asset-text" data-index="1">배롱나무</a></p>
+        <p class="asset-text" data-index="2">곶자왈</a></p>
+        <p class="asset-text" data-index="3">메타세쿼이어 숲</a></p>
+        <p class="asset-text" data-index="4">팜파스그라스</a></p>
+        <p class="asset-text" data-index="5">동백꽃</a></p>
       </div>
       <div class="embla__controls">
         <button class="embla__prev" aria-label="Previous slide">
